Fix - Blocks right alignment classes added

--- a/themes/wacoal/assets/scss/website/layouts/_list-statment-image.scss
+++ b/themes/wacoal/assets/scss/website/layouts/_list-statment-image.scss
@@ -21,7 +21,7 @@
       max-width: 100%;
     }
 
-    &:nth-child(even) {
+    &.img-right {
 
       .list-statment-image--inner {
         flex-direction: row-reverse;
